Remove data attributes

--- a/tools/readme/to-html/static/index.html
+++ b/tools/readme/to-html/static/index.html
@@ -13,13 +13,13 @@
 	<nav class="top-nav">
 			<ul class="top-nav-items">
 				{{#source}}
-				<li class="top-nav-item"><a data-name="source" href="{{{source}}}">Source</a></li>
+				<li class="top-nav-item"><a href="{{{source}}}">Source</a></li>
 				{{/source}}
 				{{#benchmarks}}
-				<li class="top-nav-item"><a data-name="benchmarks" href="{{{benchmarks}}}">Benchmarks</a></li>
+				<li class="top-nav-item"><a href="{{{benchmarks}}}">Benchmarks</a></li>
 				{{/benchmarks}}
 				{{#tests}}
-				<li class="top-nav-item"><a data-name="tests" href="{{{tests}}}">Tests</a></li>
+				<li class="top-nav-item"><a href="{{{tests}}}">Tests</a></li>
 				{{/tests}}
 			</li>
 	</nav>
